syntax = "proto3";
package funcext;
import "google/protobuf/empty.proto";

service Router {
  rpc SimpleExcel(Excel) returns (ExportURL) {}
  rpc NewTaskForExcel (NewExcel) returns (Task) {}
  rpc AddRowToExcel (stream StreamData) returns (google.protobuf.Empty) {}
  rpc CommitTaskForExcel (Task) returns (ExportURL) {}
}

message Excel {
  repeated Sheet sheets = 1;
}

message Sheet {
  string name = 1;
  repeated Row rows = 2;
}

message Row {
  string axis = 1;
  string value = 2;
}

message NewExcel{
  repeated string sheets = 1;
}

message Task{
  string taskId = 1;
}

message StreamData{
  string taskId = 1;
  string sheet = 2;
  repeated SRow rows = 3;
}

message SRow{
  string axis = 3;
  string value = 4;
}

message ExportURL {
  string url = 1;
}



